--- a/To_Do_List/Views/Shared/partials/_Navbar.cshtml
+++ b/To_Do_List/Views/Shared/partials/_Navbar.cshtml
@@ -2,9 +2,15 @@
 }
 <div class="row align-items-center justify-content-between" >
  <div class="col-auto">
+     <button type="button" class="">
+            <iconify-icon icon="heroicons:bars-3" class="icon text-2xl non-active"></iconify-icon>
+            <iconify-icon icon="iconoir:arrow-right" class="icon text-2xl active"></iconify-icon>
+     </button>
+     <button type="button" >
+
+     </button>
      <form>
          <input  type="text" name="search" placeholder="Search" />
-
      </form>
 
  </div>
